@@ -1,3 +1,5 @@
+- Issue #17974: Switch unittest from using getopt to using argparse.
+
 - Issue #11798: TestSuite now drops references to own tests after execution.
 
 - Issue #14971: unittest test discovery no longer gets confused when a function
